- fixed missing space in toolbar bug

--- a/htdocs/views/simple/style.css
+++ b/htdocs/views/simple/style.css
@@ -449,11 +449,14 @@ ul.filterbox {
 	margin: 0;
 }
 .filterbox .action.clearfilter {
-	background-position: left -694px;
-	width: 22px;
+	margin-left: -2em;
+	display: inline-block;
+	padding: 0;
+    background-image: none;
 }
 .filterbox input:focus {
 	width: 15em;
+	padding-right: 2em;
 }
 .invisible {
 	visibility: hidden;
